--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "devDependencies": {
     "@types/arcgis-js-api": "4.10.0",
+    "dojo-typings": "github:dojo/typings",
     "prettier": "1.16.4",
     "typescript": "3.3.3333"
   }
